--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -6,6 +10,11 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   color: #132743 !important;
+  @apply min-h-screen;
+}
+
+body, #root {
+  @apply flex flex-col flex-1;
 }
 
 code {
@@ -16,6 +25,3 @@ code {
 p {
   margin-left: 0 !important;
 }
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
